# renoir-bot

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md
src/: config.rs  main.rs
src/commands/: list.rs  mod.rs  next.rs  now_playing.rs  play.rs  skip.rs  stop.rs
src/domain/: mod.rs  queue.rs  track.rs
src/infrastructure/: audio.rs  inactivity.rs  mod.rs  spotify.rs  youtube.rs
src/services/: cleanup.rs  error.rs  mod.rs  music_service.rs  queue_service.rs
