[package]
name = "renoir-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
poise = "0.6"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "voice"] }
songbird = { version = "0.4", features = ["driver", "gateway", "builtin-queue"] }
rspotify = { version = "0.13", features = ["client-reqwest"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
futures = "0.3"
async-trait = "0.1"
symphonia = { version = "0.5", default-features = false, features = ["mkv", "ogg", "pcm"] }
